Add new component NotFound.js

--- a/public/index.html
+++ b/public/index.html
@@ -9,17 +9,15 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <link rel="stylesheet" href="./base.css" />
-    <link rel="stylesheet" href="./main.css" />
-    <link rel="stylesheet" href="./search.css" />
-    <link rel="stylesheet" href="./buttons.css" />
+    <link rel="stylesheet" href="./styles.css">
+
+    <!-- Install Font Awesome -->
+    <script src="https://kit.fontawesome.com/05040208f6.js" crossorigin="anonymous"></script>
 
     <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-
-    <!-- <script src="../src/index.js"></script> -->
   </body>
 </html>
